# Image-Kernel-Processing_CUDA

./: CMakeLists.txt  CUDA profiling  CUDA_check.h  Image.cu  Parameters.h  Processing.cu  README.md  main.cu
Image/Output/Times/: 4KExecTimes.txt  5KExecTimes.txt  6KExecTimes.txt  7KExecTimes.txt  8KExecTimes.txt
